--- a/style.css
+++ b/style.css
@@ -6,3 +6,13 @@ a{
   text-decoration: none;
   font-family: Menlo, Monaco, Liberation Mono; 
 }
+.title-font {
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+h1{
+  text-align: center;
+  color: white;
+}
