--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1{
   display: flex;
   justify-content: center;
   padding: 0% 20% 0% 20%;
-
+}
 .center {
   display: block;
   margin-left: auto;
