--- a/style.css
+++ b/style.css
@@ -61,19 +61,37 @@ h1{
 }
 
 .navbar {
-  width:300px;
-  margin:auto;
+  height: 10%;
+  width: 50vw;
+  margin: 0 auto;
+  margin-top: 65px;
+  padding-left: 1em;
+  padding-right: 1em;
+  box-sizing: border-box;
+  display: block;
+  border-radius: 40px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 2;
+  border-color: yellow;
+  border-style:solid;
+	border-width: 1.4px;
 }
 
 ul { /* navbar */
   display: inline-block;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin: auto;
+  padding: auto;
   overflow: hidden;
-  width: 50%;
+  width: 100%;
+	height: 10%;
 }
 
 div{ /* navbar */
   text-align: center;
+  display: inline-block;
 }
