--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ a{ /* navbar */
   font-style: normal;
   margin:5%;
   text-align: center;
+  font-size: 1.1vw;
   
 }
 a:hover{ /* navbar */
@@ -61,21 +62,18 @@ h1{
 }
 
 .navbar {
-  height: 10%;
   width: 50vw;
-  margin: 0 auto;
-  margin-top: 65px;
+  margin: auto;
+  margin-top: 4vw;
   padding-left: 1em;
   padding-right: 1em;
   box-sizing: border-box;
-  display: block;
   border-radius: 40px;
-  position: relative;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  z-index: 2;
+  z-index: 99;
   border-color: yellow;
   border-style:solid;
 	border-width: 1.4px;
@@ -84,14 +82,23 @@ h1{
 ul { /* navbar */
   display: inline-block;
   list-style-type: none;
-  margin: auto;
-  padding: auto;
+  margin: 0;
+  padding: 1.2vw;
   overflow: hidden;
   width: 100%;
 	height: 10%;
+  
 }
 
 div{ /* navbar */
   text-align: center;
   display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5vw;
+}
+
+.logo{
+  z-index: 1;
 }
