--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ a{ /* navbar */
   font-style: normal;
   margin:5%;
   text-align: center;
-  font-size: 1.1vw;
-  
+  font-size: 1.1vw; 
 }
 a:hover{ /* navbar */
   color:#fdf800;
@@ -57,32 +56,13 @@ h1{
   font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
+  margin: auto;
 }
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-.navbar {
-  width: 50vw;
-  margin: auto;
-  margin-top: 4vw;
-  padding-left: 1em;
-  padding-right: 1em;
-  box-sizing: border-box;
-  border-radius: 40px;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 99;
-  border-color: yellow;
-  border-style:solid;
-	border-width: 1.4px;
-  background-color: black;
-}
-
+} 
 ul { /* navbar */
   display: inline-block;
   list-style-type: none;
@@ -104,5 +84,9 @@ div{ /* navbar */
 }
 
 .logo{
+  margin: auto;
   z-index: 1;
+}
+#home{
+  display: grid;
 }
