--- a/style.css
+++ b/style.css
@@ -2,19 +2,7 @@ body{
   background: rgb(0, 0, 0); 
   color: white;
 }
-a{ /* navbar */
-  color: white; 
-  text-decoration: none;
-  font-family: "Space Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-  margin:5%;
-  text-align: center;
-  font-size: 1.1vw; 
-}
-a:hover{ /* navbar */
-  color:#fdf800;
-}
+
 .title-font {
   font-family: "JetBrains Mono", monospace;
   font-optical-sizing: auto;
@@ -63,30 +51,16 @@ h1{
   margin-left: auto;
   margin-right: auto;
 } 
-ul { /* navbar */
-  display: inline-block;
-  list-style-type: none;
-  margin: 0;
-  padding: 1.2vw;
-  overflow: hidden;
-  width: 100%;
-	height: 10%;
-  
-}
-
-div{ /* navbar */
-  text-align: center;
-  display: inline-block;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5vw;
-}
 
 .logo{
   margin: auto;
   z-index: 1;
 }
-#home{
-  display: grid;
-}
+#divWriteups {
+  height: 90%;
+  width: 50%;
+  padding: auto;
+  border: 5px solid gray;
+  margin: 5% 30% 0% 25%;
+} 
+
