--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,24 @@ body{
   margin: auto;
   color: #fdf800;
 }
+.navbar {
+  width: 50vw;
+  margin: auto;
+  margin-top: 4vw;
+  padding-left: 1em;
+  padding-right: 1em;
+  box-sizing: border-box;
+  border-radius: 40px;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+  border-color: yellow;
+  border-style:solid;
+	border-width: 1.4px;
+  background-color: black;
+}
 .title-font {
   font-family: "JetBrains Mono", monospace;
   font-optical-sizing: auto;
@@ -105,5 +123,38 @@ code {
   box-decoration-break: clone;
   padding: .1rem .3rem .2rem;
   border-radius: .2rem;
+}
+
+.l{ /* navbar */
+  color: white; 
+  text-decoration: none;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  margin:5%;
+  text-align: center;
+  font-size: 1.1vw; 
+}
+.l:hover{ /* navbar */
+  color:#fdf800;
+}
+
+ul { /* navbar */
+  display: inline-block;
+  list-style-type: none;
+  margin: 0;
+  padding: 1.2vw;
+  overflow: hidden;
+  width: 100%;
+	height: 10%;
+}
+
+#nav{ /* navbar */
+  text-align: center;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5vw;
 }
 
