--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body{
   display: flex;
   justify-content: center;
   padding: 0% 20% 0% 20%;
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
   margin: auto;
@@ -37,7 +37,7 @@ body{
   background-color: black;
 }
 .title-font {
-  font-family: "JetBrains Mono";
+  font-family: "JetBrains Mono", monospace;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -47,25 +47,25 @@ h1{
   color: white;
 }
 .body-font-regular {
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
 }
 
 .body-font-bold {
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 700;
   font-style: normal;
 }
 
 .body-font-regular-italic {
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: italic;
 }
 
 .body-font-bold-italic {
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 700;
   font-style: italic;
 }
@@ -74,7 +74,7 @@ h1{
   display: flex;
   justify-content: center;
   padding: 0% 20% 0% 20%;
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
   margin: auto;
@@ -106,7 +106,7 @@ a {
 .dirList{ /* navbar */
   color: white; 
   text-decoration: none;
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
   margin:5%;
@@ -127,7 +127,7 @@ code {
 .l{ /* navbar */
   color: white; 
   text-decoration: none;
-  font-family: "Space Mono";
+  font-family: "Space Mono", monospace;
   font-weight: 400;
   font-style: normal;
   margin:5%;
