--- a/styles/style.css
+++ b/styles/style.css
@@ -303,7 +303,19 @@ footer{
   display: inline-block;
   width: 100%;
 } 
+.footer-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 a{
   padding:0;
   margin:0;
+}
+
+.center-text {
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
 }
