--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,20 @@ h1{
   background-image: linear-gradient(rgba(255, 0, 0, 0) 0%, rgba(0,0,0,1) 15%, rgb(0, 0, 0) 100%);
   z-index: 98;
 }
+.f-writeup-mobile {
+  position: relative;
+  color: #ffffff;
+  display: block;
+  justify-content: center;
+  padding: 0% 5% 0% 5%;
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  margin: auto;
+  background-image: linear-gradient(rgba(255, 0, 0, 0) 0%, rgba(0,0,0,1) 15%, rgb(0, 0, 0) 100%);
+  z-index: 98;
+  font-size: 1.5em;
+}
 .center {
   display: block;
   margin-left: auto;
