--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@ body{
   margin:0;
   padding: 0;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 #fw-title{
   font-family: "JetBrains Mono", monospace;
   text-align: center;
