--- a/styles/style.css
+++ b/styles/style.css
@@ -76,33 +76,7 @@ h1{
   font-weight: 700;
   font-style: italic;
 }
-.f-writeup {
-  position: relative;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  padding: 0% 20% 0% 20%;
-  font-family: "Space Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-  margin: auto;
-  background-image: linear-gradient(rgba(255, 0, 0, 0) 0%, rgba(0,0,0,1) 15%, rgb(0, 0, 0) 100%);
-  z-index: 98;
-}
-.f-writeup-mobile {
-  position: relative;
-  color: #ffffff;
-  display: block;
-  justify-content: center;
-  padding: 0% 5% 0% 5%;
-  font-family: "Space Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-  margin: auto;
-  background-image: linear-gradient(rgba(255, 0, 0, 0) 0%, rgba(0,0,0,1) 15%, rgb(0, 0, 0) 100%);
-  z-index: 98;
-  font-size: 1.5em;
-}
+
 .center {
   display: block;
   margin-left: auto;
@@ -123,9 +97,6 @@ a {
   z-index: 99;
 }
 
-#render{
-  animation: fadein 0.5s;
-}
 
 #divWriteups{
   animation: fadein 0.5s;
@@ -347,7 +318,7 @@ span:nth-child(9){
   animation-delay: 0.75s;
   animation-duration: 2.25s;
 }
-span:nth-child(9){
+span:nth-child(10){
   top: 0px;
   right: 450px;
   left: initial;
@@ -355,17 +326,21 @@ span:nth-child(9){
   animation-duration: 2.75s;
 }
 footer{
-  margin-top: 20%;
   height: 15vw;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgba(7, 7, 7, 0.712) 20%, rgb(7, 7, 7) 100%);
+  bottom: 0;
+  position: fixed;
+  background-image: linear-gradient(rgba(255, 0, 0, 0) 0%, rgba(0,0,0,1) 15%, rgb(0, 0, 0) 100%);
   display: inline-block;
   width: 100%;
+  z-index: 98;
+  animation: fadein 0.5s;
 } 
 .footer-content {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
+  z-index: 98;
 }
 a{
   padding:0;
