fixed scaling on home page

--- a/styles/style.css
+++ b/styles/style.css
@@ -160,13 +160,14 @@ h2{
 }
 p{
   font-family: "Space Mono", monospace;
-  font-size: medium;
+  font-size: 0.75vw;
 }
 li{
   font-family: "Space Mono", monospace;
 }
 ol{
   font-family: "Space Mono", monospace;
+  font-size: 1vw;
 }
 p2{
   font-family: "Space Mono", monospace;
@@ -377,13 +378,12 @@ span:nth-child(10){
   animation-duration: 2.75s;
 }
 footer{
-  height: 15vw;
+  height: 13vw;
   bottom: 0;
-  margin-top: 20%;
   display: inline-block;
   width: 100%;
   z-index: 98;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgba(7, 7, 7, 0.712) 20%, rgb(7,7,7) 100%);
+  padding-top: 7%;
 } 
 .footer-content {
   display: flex;
