--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,7 @@ a {
   margin: auto;
   background-image: linear-gradient(rgba(255, 0, 0, 0) 0%, rgba(0,0,0,1) 20%, rgb(0, 0, 0) 100%);
   z-index: 98;
+  animation: fadein 0.5s
 }
 .f-writeup2 {
   position: relative;
@@ -151,6 +152,7 @@ a {
   margin: auto;
   z-index: 98;
   background-color: black;
+  animation: fadein 0.5s
 }
 
 
@@ -379,7 +381,7 @@ span:nth-child(10){
 footer{
   height: 15vw;
   bottom: 0;
-  margin-top: 20%;
+  margin-top: 5%;
   display: inline-block;
   width: 100%;
   z-index: 98;
